--- a/package.json
+++ b/package.json
@@ -22,30 +22,30 @@
     "password"
   ],
   "dependencies": {
-    "couch-pwd": "0.0.1",
-    "lockit-sendmail": "^1.1.2",
-    "lockit-template-blank": "0.0.2",
-    "moment": "^2.8.3",
-    "ms": "^0.7.1",
-    "node-uuid": "~1.4.1"
+    "couch-pwd": "github:zemirco/couch-pwd",
+    "lockit-sendmail": "github:cloudarmy/lockit-sendmail",
+    "lockit-template-blank": "github:cloudarmy/lockit-template-blank",
+    "moment": "^2.22.2",
+    "ms": "^2.1.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "body-parser": "^1.13.2",
-    "cookie": "^0.1.2",
-    "cookie-parser": "^1.3.3",
-    "cookie-session": "^1.2.0",
-    "csurf": "^1.6.1",
-    "errorhandler": "^1.4.1",
-    "eslint": "^0.24.0",
-    "express": "^4.13.1",
-    "jade": "^1.7.0",
+    "body-parser": "^1.18.3",
+    "cookie": "^0.3.1",
+    "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
+    "csurf": "^1.9.0",
+    "errorhandler": "^1.5.0",
+    "eslint": "^5.0.1",
+    "express": "^4.16.3",
+    "jade": "^1.11.0",
     "lockit-couchdb-adapter": "^0.5.1",
     "lockit-utils": "^0.5.3",
-    "mocha": "^2.2.5",
-    "nano": "^6.1.4",
-    "nodemailer-stub-transport": "^1.0.0",
-    "should": "^7.0.1",
+    "mocha": "^5.2.0",
+    "nano": "^6.4.4",
+    "nodemailer-stub-transport": "^1.1.0",
+    "should": "^13.2.1",
     "static-favicon": "^2.0.0-alpha",
-    "supertest": "^1.0.1"
+    "supertest": "^3.1.0"
   }
 }
